Bug 916125 - Clip scroll layer items to the scroll port so the resulting layers have the proper clip. r=roc, a=koi+